# FRA333_LAB_HW

./: .gitignore  README.md  ROS-WS.code-workspace
HW1/: FRA333_HW_1.py  FRA333_HW_1_testcase.py  hexa.clip  test.py  trackBot-matlab.m  trackbeebot.py
HW1/doc/: hw1.ipynb
HW2/: HW2_test.ipynb  fra333_hw2.py  testCase.json  testScript.py
HW2/doc/: HW2_utils_doc.py  hw2.ipynb
LAB1/doc/: instruction.ipynb
LAB1/fra333_lab1_29/: CMakeLists.txt
LAB1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB1/lab1_interfaces/: CMakeLists.txt
LAB1/log/: latest_build
LAB1_WS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB1_WS/log/: latest_build  latest_list
LAB2/CAD/: assembly.SLDASM  link_1.SLDPRT  link_3.SLDPRT  link_4.SLDPRT
LAB2/dummy_description/: CMakeLists.txt
LAB2/dummy_kinematics/: CMakeLists.txt
LAB2/dummy_kinematics_interfaces/: CMakeLists.txt
LAB2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB2/log/: latest_build
LAB2/sandevistan_kinematics/: CMakeLists.txt
LAB2/sandevistan_kinematics_interfaces/: CMakeLists.txt
LAB3/Read_IMU/: platformio.ini
LAB3/doc/: hw3.ipynb  report.ipynb
LAB3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB3/log/: latest_build
LAB4/src/lab4_29/doppelt_control/: CMakeLists.txt
LAB4/src/lab4_29/doppelt_control/config/: tracker_config.yaml  via_points.yaml
LAB4/src/lab4_29/doppelt_control/launch/: doppelt_ctrl.launch.py
LAB4/src/lab4_29/doppelt_control/scripts/: generator.py  scheduler.py  tracker.py
(+1456 files in other folders)
